@@ -45,6 +45,7 @@ Changed
     Show image variant on import images modal
     Order host's by alias when fetching from the DB (#462)
     Remove profile name from deploy cloud-config as its no longer used
+    Disable some spice channels to improve VM Terminal experience (#463)
 
 Fixed
     First run doesn't toggle passwords properly (#390)
